[tool.poetry]
name = "terraingeneration"
version = "0.1.0"
description = ""
authors = ["MEE 6 <sailzforjunkmailz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"
numpy = "^1.19"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
